<resources>
    <string name="app_name">SimpleCalculator</string>
    <string name="c">C</string>
    <string name="open_bracket">(</string>
    <string name="close_bracket">)</string>
    <string name="divide_symbol">/</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="multiply_symbol">*</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="add">+</string>
    <string name="subtraction">-</string>
    <string name="ac">ac</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="equals">=</string>
</resources>