<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/solution_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/result_tv"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:text=""
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="55sp">

    </TextView>

    <TextView
        android:id="@+id/result_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/buttonPanel"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:text="0"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="55sp">

    </TextView>


    <LinearLayout
        android:id="@+id/buttonPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            tools:ignore="UselessParent"
            >


            <Button
                android:id="@+id/button_c"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:backgroundTint="#C60F0F"
                android:layout_margin="2dp"
                android:text="@string/c"
                android:textSize="35sp" />

            <Button
            android:id="@+id/button_open_bracket"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:text="@string/open_bracket"
            android:textSize="35sp"
            android:textColor="@color/white"
            android:layout_margin="2dp"
                style="@style/Widget.MaterialComponents.Button"
            />
            <Button
                android:id="@+id/button_close_bracket"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:text="@string/close_bracket"
                android:textSize="35sp"
                android:textColor="@color/white"
                android:layout_margin="2dp"
                style="@style/Widget.MaterialComponents.Button"

                />

            <Button
                android:id="@+id/button_divide"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="2dp"
                android:backgroundTint="#EFE168"
                android:text="@string/divide_symbol"
                android:textColor="#607D8B"
                android:textSize="35sp"
                tools:targetApi="lollipop" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="UselessParent">



            <Button
                android:id="@+id/button_7"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:text="@string/_7"
                android:textSize="35sp"
                android:layout_margin="2dp"
                style="@style/Widget.MaterialComponents.Button"
                />
            <Button
                android:id="@+id/button_8"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:text="@string/_8"
                android:textSize="35sp"
                android:textColor="@color/white"
                android:layout_margin="2dp"
                style="@style/Widget.MaterialComponents.Button"
                />
            <Button
                android:id="@+id/button_9"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:text="@string/_9"
                android:textSize="35sp"
                android:textColor="@color/white"
                android:layout_margin="2dp"
                style="@style/Widget.MaterialComponents.Button"

                />

            <Button
                android:id="@+id/button_multiply"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="2dp"
                android:backgroundTint="#EFE168"
                android:text="@string/multiply_symbol"
                android:textColor="#607D8B"
                android:textSize="35sp"
                tools:targetApi="lollipop" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="UselessParent">



            <Button
                android:id="@+id/button_4"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:text="@string/_4"
                android:textSize="35sp"
                android:layout_margin="2dp"
                style="@style/Widget.MaterialComponents.Button"
                />
            <Button
                android:id="@+id/button_5"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:text="@string/_5"
                android:textSize="35sp"
                android:textColor="@color/white"
                android:layout_margin="2dp"
                style="@style/Widget.MaterialComponents.Button"
                />
            <Button
                android:id="@+id/button_6"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:text="@string/_6"
                android:textSize="35sp"
                android:textColor="@color/white"
                android:layout_margin="2dp"
                style="@style/Widget.MaterialComponents.Button"

                />

            <Button
                android:id="@+id/button_add"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="2dp"
                android:backgroundTint="#EFE168"
                android:text="@string/add"
                android:textColor="#607D8B"
                android:textSize="35sp"
                tools:targetApi="lollipop" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="UselessParent">



            <Button
                android:id="@+id/button_1"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:text="@string/_1"
                android:textSize="35sp"
                android:layout_margin="2dp"
                style="@style/Widget.MaterialComponents.Button"
                />
            <Button
                android:id="@+id/button_2"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:text="@string/_2"
                android:textSize="35sp"
                android:textColor="@color/white"
                android:layout_margin="2dp"
                style="@style/Widget.MaterialComponents.Button"
                />
            <Button
                android:id="@+id/button_3"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:text="@string/_3"
                android:textSize="35sp"
                android:textColor="@color/white"
                android:layout_margin="2dp"
                style="@style/Widget.MaterialComponents.Button"

                />

            <Button
                android:id="@+id/button_subtraction"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="2dp"
                android:backgroundTint="#EFE168"
                android:text="@string/subtraction"
                android:textColor="#607D8B"
                android:textSize="35sp"
                tools:targetApi="lollipop" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="UselessParent">



            <Button
                android:id="@+id/button_ac"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:text="@string/ac"
                android:textSize="25sp"
                android:layout_margin="2dp"
                android:backgroundTint="#C60F0F"
                style="@style/Widget.MaterialComponents.Button"
                />
            <Button
                android:id="@+id/button_zero"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:text="@string/zero"
                android:textSize="35sp"
                android:textColor="@color/white"
                android:layout_margin="2dp"
                style="@style/Widget.MaterialComponents.Button"
                />
            <Button
                android:id="@+id/button_dot"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:text="@string/dot"
                android:textSize="35sp"
                android:textColor="@color/white"
                android:layout_margin="2dp"
                style="@style/Widget.MaterialComponents.Button"

                />

            <Button
                android:id="@+id/button_equals"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="2dp"
                android:backgroundTint="#EFE168"
                android:text="@string/equals"
                android:textColor="#607D8B"
                android:textSize="35sp"
                tools:targetApi="lollipop" />
        </LinearLayout>





    </LinearLayout>

</RelativeLayout>